Fix broken layout on non-app pages
- Fixes #2

--- a/src/frontend/scss/core.scss
+++ b/src/frontend/scss/core.scss
@@ -107,6 +107,10 @@ h6 {
   flex: 1 0 auto;
 }
 
+div.content {
+  flex: 1 0 auto;
+}
+
 .faction0 {
   img {
     border: 1px solid $alliance-border;
